[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dockerlens"
version = "0.1.0"
description = "Programmatic Docker image layer analysis, auditing, and diffing for Python"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Adem Yıldırım" }]
requires-python = ">=3.9"
dependencies = [
    "docker>=6.0",
    "rich>=13.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "build>=1.0",
    "twine>=5.0",
    "types-docker>=7.0",
]

[project.urls]
Homepage = "https://github.com/tinkerera/dockerlens"
Repository = "https://github.com/tinkerera/dockerlens"
Issues = "https://github.com/tinkerera/dockerlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dockerlens"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["dockerlens"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
